--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,7 +17,7 @@ h1 {
 #search-page {
     align-items: center;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
 }
 
@@ -181,6 +181,18 @@ h1 {
  
 
 @media only screen and (min-width: 600px) {
+    #search-page {
+        align-items: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .col-50 {
+        width: 100%;
+        height: 100vh;
+    }
+
     .filled {
         margin: 5% auto;
         width: 80%;
